service-one/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-one
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8080
  type: ClusterIP
  selector:
    app: service-one
