service-one/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
 name: demo-app-vs
spec:
 gateways:
   - demo-app-gateway
 hosts:
   - "*"
 http:
   - route:
     - destination:
         host: service-one
         port:
           number: 8080
   - route:
     - destination:
         host: service-one
         port:
           number: 8443
